# api/routes/People.Routes.js
@@ -3,6 +3,7 @@
 module.exports = function (app) {
     var controller = require('../controllers/PeopleController.js');
 
+    app.post("/people", (req, res) => constroller.createPeople(req, res))
     app.get("/test/people", (req, res) => {controller.getAll(req, res)});
     app.get("/test/people/patients", (req, res) => {controller.getAllPatients(req, res)});
     app.get('/test/people/medics', (req, res) => controller.getAllMedics(req, res));
